# fm-det-analysis

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  eval.py  infer.py  pyproject.toml  requirements.txt  train.py  실행명령.md
.claude/: settings.json
DiffusionDet/: .gitignore  README.md
DiffusionDet/script/: test.py  train.py
configs/: eval.yaml  train.yaml
configs/data/: coco.yaml  voc.yaml
configs/experiment/: coco-repro-baseline.yaml  voc-repro-baseline.yaml
configs/loss/: diffusion.yaml
configs/model/: diffusiondet.yaml
configs/train/: baseline.yaml
datasets/: transforms.py
datasets/coco/: dataset.py  download.py  report.py  sanity.py  sanity_loader.py  visualize.py
datasets/voc/: dataset.py  download.py  report.py  sanity.py  sanity_loader.py  visualize.py
docs/: ADR.md  ARCHITECTURE.md  DATA_CARD.md  EVAL_PROTOCOL.md  EXPERIMENTS.md  HYDRA_GUIDE.md  ISSUE.md  MODEL_CARD.md  PENSIEVE.md  PRD.md  WANDB_GUIDE.md
env_docker/: .dockerignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh
evals/: __init__.py  coco.py  voc.py
losses/: README.md  __init__.py  criterion.py  matcher.py  sanity.py
models/: README.md  __init__.py  backbone.py  decoder.py  diffusiondet.py  sampler.py  sanity.py  study_model.md
phases/: index.json
phases/coco-repro-baseline/: index.json  step0.md  step1.md  tensorboard.pid  train.pid
phases/code-skeleton-loaders/: index.json  step0.md  step1.md  step2.md  step3.md
phases/data-sanity-coco-train/: index.json  step0.md  step1.md  step2.md  step3.md
scripts/: execute.py
utils/: box_ops.py
(+37 files in other folders)
